fix the contactme alignment

--- a/components/contactmesection/styles.module.css
+++ b/components/contactmesection/styles.module.css
@@ -15,6 +15,7 @@
 
 .heading {
     font-size: 3.5rem;
+    text-align: center;
     
 }
 
